--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,3 +1,4 @@
 golang/golang-linux-amd64.tar.gz:
   size: 102601309
+  object_id: 62ca4f61-a154-4b8d-4f3f-9a79faab6de8
   sha: 6a00c39435edc1e102f1fb75cc1137fba4c9e4e2
