--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "perm"]
 	path = src/code.cloudfoundry.org/perm
-	url = https://github.com/pivotal-cf/perm
+	url = https://github.com/cloudfoundry-incubator/perm
