Add cloudcontroller router
[#151615847]

--- a/src/code.cloudfoundry.org/cloud-controller-migrator/Gopkg.toml
+++ b/src/code.cloudfoundry.org/cloud-controller-migrator/Gopkg.toml
@@ -40,3 +40,7 @@
 [[constraint]]
   name = "github.com/onsi/gomega"
   version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/tedsuo/rata"
+  version = "1.0.0"
