Fix client_secret in config file
Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/jobs/cloud-controller-migrator/templates/cloud-controller-migrator.yml
+++ b/jobs/cloud-controller-migrator/templates/cloud-controller-migrator.yml
@@ -7,5 +7,5 @@ uaa:
 cloud_controller:
   url: <%= p('cloud_controller.url') %>
   client_id: <%= p('cloud_controller.client_id') %>
-  client_secret: <%= p('cloud_controller.client_id') %>
+  client_secret: <%= p('cloud_controller.client_secret') %>
   client_scopes: <%= p('cloud_controller.client_scopes') %>
