--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-reated by https://www.gitignore.io/api/go,osx,vim,intellij+all
+# Created by https://www.gitignore.io/api/go,osx,vim,intellij+all
 
 ### Go ###
 # Binaries for programs and plugins
