--- a/.final_builds/packages/golang-1.9-linux/index.yml
+++ b/.final_builds/packages/golang-1.9-linux/index.yml
@@ -3,4 +3,8 @@ builds:
     version: 200a29b129a9078cb156be44c4a792ae24f42900
     blobstore_id: 899aeef7-50cf-4a7a-6670-fe6dec74229f
     sha1: bacfa6a162fa7085f95df7d43e911404a3644b01
+  8d6c67abda8684ce454f0bc74050a213456573ff:
+    version: 8d6c67abda8684ce454f0bc74050a213456573ff
+    blobstore_id: 1322d89e-2e0a-43d2-4f9b-e63b62219743
+    sha1: e9dd8e92accad2091d9f19d6ffabc8e019e58f6b
 format-version: "2"
