Rename ca_cert config param to ca_cert_path
[#151616769]

--- a/jobs/cc-to-perm-migrator/templates/cc-to-perm-migrator.yml
+++ b/jobs/cc-to-perm-migrator/templates/cc-to-perm-migrator.yml
@@ -15,4 +15,4 @@ cloud_controller:
 perm:
   hostname: <%= p('perm.hostname') %>
   port: <%= link('perm').p('listen_port') %>
-  ca_cert: /var/vcap/jobs/cc-to-perm-migrator/config/certs/perm-ca.crt
+  ca_cert_path: /var/vcap/jobs/cc-to-perm-migrator/config/certs/perm-ca.crt
