--- a/src/code.cloudfoundry.org/cc-to-perm-migrator/Gopkg.toml
+++ b/src/code.cloudfoundry.org/cc-to-perm-migrator/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   branch = "master"
   name = "code.cloudfoundry.org/perm-go"
+
+[[constraint]]
+  branch = "master"
+  name = "code.cloudfoundry.org/perm"
